--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,29 +11,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".institute_list">
-
-
-
-        </activity>
+        <activity android:name=".institute_list"/>
         <activity android:name=".public_login" />
         <activity android:name=".controller" />
         <activity android:name=".forgot_password" />
         <activity android:name=".profile" />
         <activity android:name=".student_home" />
-        <activity android:name=".institute_home" />
-        <activity android:name=".admin_home" >
+        <activity android:name=".institute_home">
+
+
+
+
+
+        </activity>
+        <activity android:name=".admin_home"/>
+        <activity android:name=".login" />
+        <activity android:name=".signup" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-        <activity android:name=".login" />
-        <activity android:name=".signup" />
-        <activity android:name=".MainActivity">
-
         </activity>
 
         <meta-data
