--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
 
+    //PDF Reader------------------------------------------------------------//
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
