--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".upload_pdf"></activity>
+        <activity android:name=".VideoPlayer"></activity>
+        <activity android:name=".upload_Videos" />
+        <activity android:name=".upload_pdf" />
         <activity android:name=".ShowToAdmin" />
         <activity android:name=".Show_Profile" />
         <activity android:name=".Details" />
@@ -30,8 +32,8 @@
         <activity android:name=".forgot_password" />
         <activity android:name=".profile" />
         <activity android:name=".student_home" />
-        <activity android:name=".institute_home" />
-        <activity android:name=".admin_home"></activity>
+        <activity android:name=".institute_home"></activity>
+        <activity android:name=".admin_home" />
         <activity android:name=".login" />
         <activity android:name=".signup" />
         <activity android:name=".MainActivity" />
